src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/ARBTessellationShader_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/ARBTessellationShader_StringErrorContext.class */
public final class ARBTessellationShader_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glPatchParameteri(II)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTessellationShaderErrorContext");
        methods.put("nglPatchParameterfv(IJ)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTessellationShaderErrorContext");
        methods.put("glPatchParameterfv(ILjava/nio/FloatBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTessellationShaderErrorContext");
        methods.put("glPatchParameterfv(I[F)V", "net/labymod/core/laby3d/opengl/error/generated/ARBTessellationShaderErrorContext");
        return methods;
    }
}
